[package]
name = "python_genshin_artifact"
version = "1.0.9"
edition = "2021"
license = "MIT"
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/Makefile",
    "/src",
    "/watchfiles",
    "/tests",
    "/requirements",
    "/.cargo",
    "!__pycache__",
    "!tests/.mypy_cache",
    "!tests/.pytest_cache",
    "!*.so",
]

[lib]
name = "_python_genshin_artifact"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["anyhow"] }
mona_wasm = { path = "genshin_artifact/mona_wasm" }
mona = { path = "genshin_artifact/mona_core" }
mona_generate = { path = "genshin_artifact/mona_generate" }
num = "0.4"
serde="1.0"
serde_json = "1.0"
anyhow = "1.0"
pythonize = "0.20.0"
bincode = "1.3.3"

[features]
default = ["pyo3/extension-module"]
