[package]
name = "python_genshin_artifact"
version = "1.0.14"
edition = "2021"
license = "MIT"
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/Makefile",
    "/src",
    "/watchfiles",
    "/tests",
    "/requirements",
    "/.cargo",
    "!__pycache__",
    "!tests/.mypy_cache",
    "!tests/.pytest_cache",
    "!*.so",
]

[lib]
name = "_python_genshin_artifact"
crate-type = ["cdylib"]

[dependencies]
# TODO it would be very nice to remove the "py-clone" feature as it can panic,
# but needs a bit of work to make sure it's not used in the codebase
# see https://pyo3.rs/v0.23.3/migration.html#pyclone-is-now-gated-behind-the-py-clone-feature
pyo3 = { version = "0.23", features = ["anyhow", "py-clone"] }
mona_wasm = { path = "genshin_artifact/mona_wasm" }
mona = { path = "genshin_artifact/mona_core" }
mona_generate = { path = "genshin_artifact/mona_generate" }
num = "0.4"
serde="1.0"
serde_json = "1.0"
anyhow = "1.0"
pythonize = "0.23"
bincode = "1.3.3"

[features]
default = ["pyo3/extension-module"]
