[project]
name = "python_genshin_artifact"
requires-python = '>=3.8'
version = "0.1.4"
authors = [
    {name = 'luoshuijs', email = 'luoshuijs@outlook.com'},
    {name = 'kotori', email = 'minamiktr@outlook.com'}
]

[tool.maturin]
module-name = "python_genshin_artifact._python_genshin_artifact"
bindings = 'pyo3'
#python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
