[project]
name = "python_genshin_artifact"
requires-python = ">=3.9"
version = "1.0.14"
authors = [
    {name = "luoshuijs", email = "luoshuijs@outlook.com"},
    {name = "xtaodada", email = "xtao@xtao.de"},
    {name = "kotori", email = "minamiktr@outlook.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Programming Language :: Python :: 3.13',
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Framework :: AnyIO",
]
dynamic = [
    "license",
    "readme",
    "version"
]

[tool.maturin]
module-name = "python_genshin_artifact._python_genshin_artifact"
bindings = "pyo3"
#python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
linting = [
    'ruff',
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ["py38"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "Q", # flake8-quotes
    "C90", # complex-structure
    "I", # isort
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]
extend-ignore = [
    "E721",  # using type() instead of isinstance() - we use this in tests
]
mccabe = { max-complexity = 13 }
isort = { known-first-party = ["python_genshin_artifact", "tests"] }

