[package]
name = "genshin_artifact_core"
version = "0.1.1"
edition = "2021"

[lib]
name = "genshin_artifact_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
mona_wasm = { path = "../genshin_artifact/mona_wasm" }
mona = { path = "../genshin_artifact/mona_core" }
mona_generate = { path = "../genshin_artifact/mona_generate" }
num = "0.4"
serde="1.0"
serde_json = "1.0"